fix: test coverage